--- a/api/package.json
+++ b/api/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@redwoodjs/api": "^0.18.0"
+    "@redwoodjs/api": "^0.18.0",
+    "prs-atm": "^2.0.40"
   }
 }
