--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "@redwoodjs/forms": "^0.18.0",
     "@redwoodjs/router": "^0.18.0",
     "@redwoodjs/web": "^0.18.0",
+    "antd": "^4.6.4",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
